--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,17 @@
   color: #61dafb;
 }
 
+/* ( 크롬, 사파리, 오페라, 엣지 ) 동작 */
+.scroll::-webkit-scrollbar {
+  display: none;
+}
+
+.scroll {
+  -ms-overflow-style: none; /* 인터넷 익스플로러 */
+  scrollbar-width: none; /* 파이어폭스 */
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
