--- a/src/scss/_slick.scss
+++ b/src/scss/_slick.scss
@@ -25,8 +25,8 @@
     display: block;
     overflow: hidden;
 
-    margin: 0;
-    padding: -5px;
+    width: 100vw;
+    height: 100vw;
 }
 .slick-list:focus
 {
@@ -57,6 +57,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+
 }
 .slick-track:before,
 .slick-track:after
@@ -82,7 +83,7 @@
     height: 100%;
     min-height: 1px;
 
-    padding: 5px;
+    // padding: 5px;
 }
 [dir='rtl'] .slick-slide
 {
