--- a/src/scss/_slick.scss
+++ b/src/scss/_slick.scss
@@ -25,8 +25,8 @@
     display: block;
     overflow: hidden;
 
-    width: 100vw;
-    height: 100vw;
+    width: 100%;
+    height: 100%;
 }
 .slick-list:focus
 {
