--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 
 div {
   border-color: #d9d9d9;
-  background-color: white;
+  /* background-color: white; */
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;400&family=Noto+Sans+KR&display=swap');
